fix: settings: toolbar list controls were taking up too much room on phones

--- a/src/Styles/settings.css
+++ b/src/Styles/settings.css
@@ -128,6 +128,11 @@
             }
         }
     }
+    & .setting-item-control {
+        .is-phone & {
+            width: unset !important;
+        }
+    }
 } 
 
 .mod-cta .note-toolbar-setting-text-with-icon {
